Add gif to test

--- a/index.html
+++ b/index.html
@@ -33,74 +33,79 @@
                     </li>
                     <li class="nav-item pt-1">
                         <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#works"><span
-                                class="grey-font">02. </span>Works</a>
+                                class="grey-font">02. </span>Developer</a>
                     </li>
                     <li class="nav-item pt-1">
                         <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#documentation"><span
-                                class="grey-font">03. </span>Docs</a>
+                                class="grey-font">03. </span>Admin</a>
                     </li>
                     <li class="nav-item pt-1">
                         <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#miscellaneous"><span
-                                class="grey-font">04. </span>Misc</a>
+                                class="grey-font">04. </span>Media</a>
                     </li>
                     <li class="nav-item download-btn mx-3 me-lg-0">
-                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page"
-                            href="/resource/resume/Joshua Ho Gwok Hin.pdf" download>Resume <span
-                                class="d-md-inline-block d-lg-none "><i class="bi bi-file-pdf"></i> Download</span></a>
+                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page" href="#contact"
+                            download>Resume <span class="d-md-inline-block d-lg-none "><i class="bi bi-file-pdf"></i>
+                                Download</span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section class="page-content">
+    <section class="page-content" id="about">
 
-        <div id="about" class="row">
+        <div class="row about">
 
-            <div class="col-3 border-right ps-3">
+            <div class="col-3 d-none d-lg-block border-right ps-3">
                 <h3>Quick start:</h3>
                 <br class="break-height" />
                 <ul class="side-links">
-                    <li><a href="/about">About Me</a></li>
-                    <li><a href="/works">Sample works</a></li>
-                    <li><a href="/documentation">Paperwork</a></li>
-                    <li><a href="/miscellaneous">Hobbies</a></li>
+                    <li><a href="/#works">Sample works</a></li>
+                    <li><a href="/#documentation">Paperwork</a></li>
+                    <li><a href="/#miscellaneous">Hobbies</a></li>
                 </ul>
 
             </div>
             <div class="col ps-4 border-left">
-                <p class="welcome text-info"> HELLO & WELCOME!</p>
-                                <p class="big-smile text-warning"><i class="bi bi-emoji-smile-fill"></i></p>
-
-                <!-- <br class="break-height" /> -->
-
-                <p class="text-info console-font">My name is</p>
-                <h1 class="display-5 jumbotron">Joshua Ho <span class="d-none d-md-inline-block">Gwok Hin</span>.</h1>
-                <h2>I design and build content for the web.</h2>
+                <p class="text-info console-font">Hi, my name is</p>
+                <h1 class="display-5 jumbotron">Joshua<span class="d-none d-sm-inline-block">&MediumSpace;Ho Gwok
+                        Hin</span>.</h1>
+                <h2 class="pt-2">I <span class="text-danger">love</span> to <i class="text-warning">design</i> and build content for the web.</h2>
                 <br class="break-height" />
+                <p>                I enjoy working with the following Frameworks and Libraries:
+</p>
+                <section class="row stack-display d-flex">
 
-                <section class="stack-display">
-                    <i class="bi bi-filetype-html" title="HyperText Markup Language"></i>
-                    <i class="bi bi-filetype-css" title="Cascading Style Sheets"></i>
-                    <i class="bi bi-filetype-js " title="JavaScript"></i>
-                    <i class="bi bi-filetype-java" title="Java"></i>
-                    <i class="bi bi-filetype-sql" title="Structured Query Language"></i>
+                    <div class="col-6 col-sm-3 pt-3">
+                        <img src="/images/logos/angular.png" alt="Angular" title="Angular" class="ps-2">
+                        <p class="pt-2 ps-2">Angular</p>
+                    </div>
+
+                    <div class="col-6 col-sm-3 pt-3">
+                        <img src="/images/logos/react.svg.png" alt="" class="">
+                        <p class="pt-2 ps-2">&ThickSpace;REACT</p>
+                    </div>
+
+                    <div class="col-6 col-sm-3 pt-3">
+                        <img src="/images/logos/bootstrap.svg" alt="" class="">
+                        <p class="pt-2 ps-1">Bootstrap</p>
+                    </div>
+
+                    <div class="col-6 col-sm-3 pt-3">
+                        <img src="/images/logos/spring.svg" alt="" class="ps-2">
+                        <p class="pt-1">Spring&NonBreakingSpace;Boot</p>
+                    </div>
+
                 </section>
-
             </div>
         </div>
 
-        <div id="works" class="row ">
-            <div class="col-3 border-right">
-                <h1>hello</h1>
-                <ul>
-                    <li>one</li>
-                    <li>two</li>
-                    <li>three</li>
-                    <li>four</li>
-                    <li>five</li>
-                </ul>
-
+        <div id="works" class="row mt-5 pt-5">
+            <h2 class="pt-4">Works</h2>
+            <h4 class="pt-5 text-info console-font">Find Your Hat (Node.js Game)</h3>
+            <div class="col-12 col-3 border-right">
+                <img src="/images/works/8bjchl.gif" alt="" class="w-100">
             </div>
             <div class="col">
                 <p class="text-info ps-3">Hi, my name is</p>
@@ -127,12 +132,13 @@
                 Status: 🟢 200 OK
             </div>
             <div class="col d-flex justify-content-center justify-content-sm-end">
-                <span class="">UTF-8</span>&ThickSpace; &ThickSpace;
+                <span class="d-none d-md-inline-block">Languages:&ThickSpace; &ThickSpace;</span>
                 <span><i class="bi bi-filetype-html"></i> HTML</span>&ThickSpace; &ThickSpace;
                 <span><i class="bi bi-filetype-css"></i> CSS</span>&ThickSpace; &ThickSpace;
-                <span><i class="bi bi-filetype-js"></i> JavaScript</span>&ThickSpace; &ThickSpace;
-                <span><i class="bi bi-bootstrap"></i> Bootstrap <span
-                        class="d-none d-sm-inline-block">v5.3.2</span></span>
+                <span><i class="bi bi-filetype-js"></i> J<span class="d-none d-md-inline-block">ava</span>S<span class="d-none d-md-inline-block">cript</span></span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-tsx"></i> T<span class="d-none d-md-inline-block">ype</span>S<span class="d-none d-md-inline-block">cript</span></span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-java"></i> JAVA</span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-sql"></i> SQL</span>
             </div>
         </div>
 
@@ -151,5 +157,4 @@
     </footer>
 
 </body>
-
 </html>
