About section completed

--- a/index.html
+++ b/index.html
@@ -53,72 +53,93 @@
         </div>
     </nav>
 
-    <section class="page-content" id="about">
+    <section id="about">
+        <p class="d-lg-none d-xxl-inline-block break-height">&MediumSpace;</p><br>
+        <!-- <p class="d-none d-md-inline-block d-xl-inline-block d-xxl-inline-block break-height">d&MediumSpace;</p> -->
+        <p class="d-none d-md-inline-block d-xxl-inline-block break-height">&MediumSpace;</p>
+        <div class="page-content py-0 my-0">
+            <div class="row py-0 my-0">
 
-        <div class="row about">
+                <div class="col-3 d-none d-lg-block border-right ps-3">
+                    <p class="break-height">&MediumSpace;</p>
 
-            <div class="col-3 d-none d-lg-block border-right ps-3">
-                <h3>Quick start:</h3>
-                <br class="break-height" />
-                <ul class="side-links">
-                    <li><a href="/#works">Sample works</a></li>
-                    <li><a href="/#documentation">Paperwork</a></li>
-                    <li><a href="/#miscellaneous">Hobbies</a></li>
-                </ul>
+                    <h3>Quick start:</h3>
+                    <br class="break-height" />
+                    <ul class="side-links">
+                        <li><a href="/#works">Sample works</a></li>
+                        <li><a href="/#documentation">Paperwork</a></li>
+                        <li><a href="/#miscellaneous">Hobbies</a></li>
+                    </ul>
+                </div>
 
-            </div>
-            <div class="col ps-4 border-left">
-                <p class="text-info console-font">Hi, my name is</p>
-                <h1 class="display-5 jumbotron">Joshua<span class="d-none d-sm-inline-block">&MediumSpace;Ho Gwok
-                        Hin</span>.</h1>
-                <h2 class="pt-2">I <span class="text-danger">love</span> to <i class="text-warning">design</i> and build content for the web.</h2>
-                <br class="break-height" />
-                <p>                I enjoy working with the following Frameworks and Libraries:
-</p>
-                <section class="row stack-display d-flex">
+                <div class="col ps-4 border-left">
+                    <p class="text-info console-font py-0 my-0">Hi, my name is</p>
+                    <p class="d-none d-md-block d-lg-none d-xl-block d-xxl-block break-height">&MediumSpace;</p>
+                    <h1 class="display-5 jumbotron py-0 my-0">Joshua<span
+                            class="d-none d-sm-inline-block">&MediumSpace;Ho Gwok
+                            Hin</span>.</h1>
+                    <p class="break-height">&MediumSpace;</p>
+                    <p class="d-none break-height d-md-block d-lg-none">&MediumSpace;</p>
 
-                    <div class="col-6 col-sm-3 pt-3">
-                        <img src="/images/logos/angular.png" alt="Angular" title="Angular" class="ps-2">
-                        <p class="pt-2 ps-2">Angular</p>
-                    </div>
+                    <h4 class="py-0 my-0">I <span class="text-danger">love</span> to <i class="text-warning">design</i>
+                        and
+                        build content for the web.</h4>
+                    <p class="break-height d-lg-none d-xxl-inline-block">&MediumSpace;</p>
 
-                    <div class="col-6 col-sm-3 pt-3">
-                        <img src="/images/logos/react.svg.png" alt="" class="">
-                        <p class="pt-2 ps-2">&ThickSpace;REACT</p>
-                    </div>
+                    <p class="py-0 my-0">I am familiar with the following frameworks and libraries:</p>
+                    <p class="break-height">&MediumSpace;</p>
 
-                    <div class="col-6 col-sm-3 pt-3">
-                        <img src="/images/logos/bootstrap.svg" alt="" class="">
-                        <p class="pt-2 ps-1">Bootstrap</p>
-                    </div>
+                    <section class="row stack-display d-flex">
+                        <div class="col-6 col-sm-3 py-0 my-0">
+                            <img src="/images/logos/angular.png" alt="Angular" title="Angular" class="ps-2">
+                            <p class="pt-2 ps-1 ms-2 small">Angular</p>
+                        </div>
 
-                    <div class="col-6 col-sm-3 pt-3">
-                        <img src="/images/logos/spring.svg" alt="" class="ps-2">
-                        <p class="pt-1">Spring&NonBreakingSpace;Boot</p>
-                    </div>
+                        <div class="col-6 col-sm-3 py-0 my-0">
+                            <img src="/images/logos/react.svg.png" alt="" class="">
+                            <p class="pt-2 ps-2 small">&ThickSpace;REACT</p>
+                        </div>
 
-                </section>
+                        <div class="col-6 col-sm-3 py-0 my-0">
+                            <img src="/images/logos/bootstrap.svg" alt="" class="">
+                            <p class="pt-2 ps-2 small">Bootstrap</p>
+                        </div>
+
+                        <div class="col-6 col-sm-3 py-0 my-0">
+                            <img src="/images/logos/spring.svg" alt="" class="ps-2">
+                            <p class="pt-1 ps-1 small">Spring&NonBreakingSpace;Boot</p>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
 
         <div id="works" class="row mt-5 pt-5">
-            <h2 class="pt-4">Works</h2>
-            <h4 class="pt-5 text-info console-font">Find Your Hat (Node.js Game)</h3>
-            <div class="col-12 col-3 border-right">
-                <img src="/images/works/8bjchl.gif" alt="" class="w-100">
-            </div>
-            <div class="col">
-                <p class="text-info ps-3">Hi, my name is</p>
-                <h1 class="text-secondary ps-4">Next Next Next</h1>
-                <h2 class="text-secondary">Please come back later. Thank you</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime quam!
-                    Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum voluptate
-                    mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos possimus
-                    sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime quam!
-                    Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum voluptate
-                    mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos possimus
-                    sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
+            <div class="page-content">
+                <h2 class="pt-4 mt-5">Works</h2>
+                <h4 class="pt-5 text-info console-font">Find Your Hat (Node.js Game)</h3>
+                    <div class="col-12 col-3 border-right">
+                        <img src="/images/works/8bjchl.gif" alt="" class="w-100">
+                    </div>
+                    <div class="col">
+                        <p class="text-info ps-3">Hi, my name is</p>
+                        <h1 class="text-secondary ps-4">Next Next Next</h1>
+                        <h2 class="text-secondary">Please come back later. Thank you</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime
+                            quam!
+                            Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum
+                            voluptate
+                            mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos
+                            possimus
+                            sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime
+                            quam!
+                            Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum
+                            voluptate
+                            mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos
+                            possimus
+                            sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
+                    </div>
             </div>
         </div>
 
@@ -135,8 +156,10 @@
                 <span class="d-none d-md-inline-block">Languages:&ThickSpace; &ThickSpace;</span>
                 <span><i class="bi bi-filetype-html"></i> HTML</span>&ThickSpace; &ThickSpace;
                 <span><i class="bi bi-filetype-css"></i> CSS</span>&ThickSpace; &ThickSpace;
-                <span><i class="bi bi-filetype-js"></i> J<span class="d-none d-md-inline-block">ava</span>S<span class="d-none d-md-inline-block">cript</span></span>&ThickSpace; &ThickSpace;
-                <span><i class="bi bi-filetype-tsx"></i> T<span class="d-none d-md-inline-block">ype</span>S<span class="d-none d-md-inline-block">cript</span></span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-js"></i> J<span class="d-none d-md-inline-block">ava</span>S<span
+                        class="d-none d-md-inline-block">cript</span></span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-tsx"></i> T<span class="d-none d-md-inline-block">ype</span>S<span
+                        class="d-none d-md-inline-block">cript</span></span>&ThickSpace; &ThickSpace;
                 <span><i class="bi bi-filetype-java"></i> JAVA</span>&ThickSpace; &ThickSpace;
                 <span><i class="bi bi-filetype-sql"></i> SQL</span>
             </div>
@@ -157,4 +180,5 @@
     </footer>
 
 </body>
+
 </html>
