--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Joshua's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
         integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
     <script src="/js/bootstrap.min.js" defer></script>
+    <script src="/js/populate-works.js" defer></script>
 </head>
 
 <body class="bg-black main">
@@ -32,7 +33,7 @@
                             <span class="grey-font">01. </span>About</a>
                     </li>
                     <li class="nav-item pt-1">
-                        <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#works"><span
+                        <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#developer"><span
                                 class="grey-font">02. </span>Developer</a>
                     </li>
                     <li class="nav-item pt-1">
@@ -55,7 +56,6 @@
 
     <section id="about">
         <p class="d-lg-none d-xxl-inline-block break-height">&MediumSpace;</p><br>
-        <!-- <p class="d-none d-md-inline-block d-xl-inline-block d-xxl-inline-block break-height">d&MediumSpace;</p> -->
         <p class="d-none d-md-inline-block d-xxl-inline-block break-height">&MediumSpace;</p>
         <div class="page-content py-0 my-0">
             <div class="row py-0 my-0">
@@ -113,40 +113,53 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <div id="works" class="row mt-5 pt-5">
-            <div class="page-content">
-                <h2 class="pt-4 mt-5">Works</h2>
-                <h4 class="pt-5 text-info console-font">Find Your Hat (Node.js Game)</h3>
-                    <div class="col-12 col-3 border-right">
-                        <img src="/images/works/8bjchl.gif" alt="" class="w-100">
-                    </div>
-                    <div class="col">
-                        <p class="text-info ps-3">Hi, my name is</p>
-                        <h1 class="text-secondary ps-4">Next Next Next</h1>
-                        <h2 class="text-secondary">Please come back later. Thank you</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime
-                            quam!
-                            Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum
-                            voluptate
-                            mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos
-                            possimus
-                            sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime
-                            quam!
-                            Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum
-                            voluptate
-                            mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos
-                            possimus
-                            sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
-                    </div>
-            </div>
+    <section id="developer" class="container page-content pt-5">
+        <h1 class="pt-5">Works</h1>
+
+        <div id="works">
+
+            <article class="row">
+                <h2 class="py-3 text-info console-font">Find Your Hat</h2>
+
+                <section class="col-12 col-md-6 col-lg-4 border-right">
+                    <img src="/images/works/8bjchl.gif" alt="" class="w-100">
+                </section>
+                <section class="col-12 col-md-6 col-lg-6 col-xl-4">
+                    <h3 class="">Descriptions:</h3>
+                    <p>This node.js game is an assignment of a school project of SCTP with Generation.sg and Temasek Poly. This JavaScript programming foundation assignment allows me to demonstrate my creativity and sense of beauty.</p>
+
+                    <h4 class="">Languages:</h4>
+                    <ul>
+                        <li>JavaScript</li>
+                    </ul>
+
+                    <h4 class="">Skills:</h4>
+                    <ul>
+                        <li></li>
+                    </ul>
+
+                    <h4 class="">Demo Links:</h4>
+                    <a href="https://replit.com/@Joshua-Ho-Gwok/Find-your-hat#138ee1e2-fda9-4683-9d2a-5e7ae201341a" target="_blank" class="btn btn-dark">Replit</a>
+                    <a href="https://github.com/Joshua-Ho-Gwok-Hin/EDU-SCTP-TEMASEK-POLY/tree/b04fe847439da296e9aa4a4549646502c4ff5f94/ASSESSMENT%20-%20JavaScript%20-%20Find%20Your%20Hat%20Game" target="_blank" class="btn btn-dark">GitHub</a>
+                </section>
+
+            </article>
+
         </div>
 
+        <div id="testworks" class="text-secondary pt-3" >
+           js not working
+        </div>
     </section>
 
 
 
+
+
+
+    <p class="footer-space">.</p>
     <footer>
         <div class="row status-bar">
             <div class="col-3 d-none d-sm-block">
@@ -178,6 +191,11 @@
                     class="bi bi-music-note-beamed"></i></a> &ThickSpace; &ThickSpace;
         </div>
     </footer>
+
+    <script>
+        // let testingwork = document.getElementById('testworks');
+        // testingwork.innerHTML = "hello";
+    </script>
 
 </body>
 
