--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/images/person-square.svg">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
         integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
     <script src="/js/bootstrap.min.js" defer></script>
-    <script src="/js/populate-works.js" defer></script>
+    <script type="module" src="/js/populate-works.js" defer></script>
 </head>
 
 <body class="bg-black main">
@@ -154,11 +155,6 @@
         </div>
     </section>
 
-
-
-
-
-
     <p class="footer-space">.</p>
     <footer>
         <div class="row status-bar">
@@ -191,11 +187,6 @@
                     class="bi bi-music-note-beamed"></i></a> &ThickSpace; &ThickSpace;
         </div>
     </footer>
-
-    <script>
-        // let testingwork = document.getElementById('testworks');
-        // testingwork.innerHTML = "hello";
-    </script>
 
 </body>
 
