--- a/index.html
+++ b/index.html
@@ -119,39 +119,33 @@
     <section id="developer" class="container page-content pt-5">
         <h1 class="pt-5">Works</h1>
 
-        <div id="works">
 
+        <div id="works" class="text-secondary pt-3">
             <article class="row">
                 <h2 class="py-3 text-info console-font">Find Your Hat</h2>
-
                 <section class="col-12 col-md-6 col-lg-4 border-right">
                     <img src="/images/works/8bjchl.gif" alt="" class="w-100">
                 </section>
                 <section class="col-12 col-md-6 col-lg-6 col-xl-4">
                     <h3 class="">Descriptions:</h3>
-                    <p>This node.js game is an assignment of a school project of SCTP with Generation.sg and Temasek Poly. This JavaScript programming foundation assignment allows me to demonstrate my creativity and sense of beauty.</p>
-
+                    <p>This node.js game is an assignment of a school project of SCTP with Generation.sg and Temasek
+                        Poly. This JavaScript programming foundation assignment allows me to demonstrate my creativity
+                        and sense of beauty.</p>
                     <h4 class="">Languages:</h4>
                     <ul>
                         <li>JavaScript</li>
                     </ul>
-
                     <h4 class="">Skills:</h4>
                     <ul>
                         <li></li>
                     </ul>
-
                     <h4 class="">Demo Links:</h4>
-                    <a href="https://replit.com/@Joshua-Ho-Gwok/Find-your-hat#138ee1e2-fda9-4683-9d2a-5e7ae201341a" target="_blank" class="btn btn-dark">Replit</a>
-                    <a href="https://github.com/Joshua-Ho-Gwok-Hin/EDU-SCTP-TEMASEK-POLY/tree/b04fe847439da296e9aa4a4549646502c4ff5f94/ASSESSMENT%20-%20JavaScript%20-%20Find%20Your%20Hat%20Game" target="_blank" class="btn btn-dark">GitHub</a>
+                    <a href="https://replit.com/@Joshua-Ho-Gwok/Find-your-hat#138ee1e2-fda9-4683-9d2a-5e7ae201341a"
+                        target="_blank" class="btn btn-dark">Replit</a>
+                    <a href="https://github.com/Joshua-Ho-Gwok-Hin/EDU-SCTP-TEMASEK-POLY/tree/b04fe847439da296e9aa4a4549646502c4ff5f94/ASSESSMENT%20-%20JavaScript%20-%20Find%20Your%20Hat%20Game"
+                        target="_blank" class="btn btn-dark">GitHub</a>
                 </section>
-
             </article>
-
-        </div>
-
-        <div id="testworks" class="text-secondary pt-3" >
-           js not working
         </div>
     </section>
 
