Update list-items placement and styling

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     </nav>
 
     <section id="about">
-        <p class="d-lg-none d-xxl-inline-block break-height">&MediumSpace;</p><br>
+        <p class="d-none d-sm-block d-lg-none d-xxl-inline-block break-height">&MediumSpace;</p><br>
         <p class="d-none d-md-inline-block d-xxl-inline-block break-height">&MediumSpace;</p>
+        <p class="d-sm-none"></p>
         <div class="page-content py-0 my-0">
             <div class="row py-0 my-0">
 
@@ -80,16 +81,14 @@
                             class="d-none d-sm-inline-block">&MediumSpace;Ho Gwok
                             Hin</span>.</h1>
                     <p class="break-height">&MediumSpace;</p>
-                    <p class="d-none break-height d-md-block d-lg-none">&MediumSpace;</p>
-
                     <h4 class="py-0 my-0">I <span class="text-danger">love</span> to <i class="text-warning">design</i>
                         and
                         build content for the web.</h4>
-                    <p class="break-height d-lg-none d-xxl-inline-block">&MediumSpace;</p>
-
+                    <p class="break-height d-none d-sm-block d-md-block d-lg-none d-xxl-inline-block">&MediumSpace;</p>
+                    <p class="d-sm-none"></p>
                     <p class="py-0 my-0">I am familiar with the following frameworks and libraries:</p>
-                    <p class="break-height">&MediumSpace;</p>
-
+                    <p class="break-height d-none d-sm-block">&MediumSpace;</p>
+                    <p class="d-sm-none">&MediumSpace;</p>
                     <section class="row stack-display d-flex">
                         <div class="col-6 col-sm-3 py-0 my-0">
                             <img src="/images/logos/angular.png" alt="Angular" title="Angular" class="ps-2">
@@ -117,7 +116,7 @@
     </section>
 
     <section id="developer" class="container page-content pt-5">
-        <h1 class="pt-5">Works</h1>
+        <h1 class="pt-3">Works</h1>
 
 
         <div id="works" class="text-secondary pt-3">
