Added HackerRank to footer

--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
         </div>
 
         <div class="footer-bar d-flex justify-content-center justify-content-md-start">
-            <span class="grey-font">Follow me on</span>&MediumSpace;
+            <span class="grey-font">Follow me <span class="d-none d-sm-inline-block">on</span></span>&MediumSpace;
             <span class="text-info">Social</span><span class="text-white">Media</span> &ThickSpace; &ThickSpace;
             <a href="https://www.linkedin.com/in/joshua-ho-gwok-hin/" target="_blank"><i class="bi bi-linkedin"></i></a>
             &ThickSpace; &ThickSpace;
             <a href="https://github.com/Joshua-Ho-Gwok-Hin" target="_blank"><i class="bi bi-github"></i></a>
+            &ThickSpace; &ThickSpace;
+            <a href="https://www.hackerrank.com/profile/joshua_ho" target="_blank"><img src="/images/logos/hackerrank_cursor_favicon_480px-150x150.png" alt="" style="width: 16px;"></a>
             &ThickSpace; &ThickSpace;
             <a href="https://youtu.be/pnlO8fFPyEA?si=kDE6bgdh2KDCQvll" target="_blank"><i class="bi bi-youtube"></i></a>
             &ThickSpace; &ThickSpace;
