Fixed broken nav links

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                             <span class="grey-font">01. </span>About</a>
                     </li>
                     <li class="nav-item pt-1">
-                        <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#developer"><span
-                                class="grey-font">02. </span>Developer</a>
+                        <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#works"><span
+                                class="grey-font">02. </span>Works</a>
                     </li>
                     <li class="nav-item pt-1">
                         <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#documentation"><span
-                                class="grey-font">03. </span>Admin</a>
+                                class="grey-font">03. </span>Docs</a>
                     </li>
                     <li class="nav-item pt-1">
                         <a class="nav-link active nav-link-text ms-3" aria-current="page" href="#miscellaneous"><span
-                                class="grey-font">04. </span>Media</a>
+                                class="grey-font">04. </span>Misc</a>
                     </li>
                     <li class="nav-item download-btn mx-3 me-lg-0">
-                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page" href="#contact"
+                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page" href="/resource/resume/Joshua Ho Gwok Hin.pdf"
                             download>Resume <span class="d-md-inline-block d-lg-none "><i class="bi bi-file-pdf"></i>
                                 Download</span></a>
                     </li>
